--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/styles": "^6.4.5",
     "chartjs": "^0.3.24",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -25,12 +26,14 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-jss": "^10.10.0",
-    "react-router-dom": "^7.2.0"
+    "react-router-dom": "^7.2.0",
+    "styled-component": "^2.8.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.3",
+    "@types/styled-components": "^5.1.34",
     "@vitejs/plugin-react": "^1.3.2",
     "eslint": "^9.19.0",
     "eslint-plugin-react-hooks": "^5.0.0",
