--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
   "compilerOptions": {
     "jsxImportSource": "@emotion/react",
     "jsx": "react-jsx",
-    "strict": true
+    "strict": true,
+    "target": "ES2021",
+    "lib": ["es2021", "dom"]
   }
 }
