--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "jsxImportSource": "@emotion/react",
     "jsx": "react-jsx",
     "strict": true,
-    "target": "ES2021",
-    "lib": ["es2021", "dom"]
+    "lib": ["ES2021"],
+    "target": "ES2021"
   }
 }
