--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-dom": "^19.0.0",
     "react-jss": "^10.10.0",
     "react-router-dom": "^7.2.0",
-    "styled-component": "^2.8.0"
+    "styled-component": "^2.8.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
