--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/styles": "^6.4.5",
     "chartjs": "^0.3.24",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "mysql2": "^3.12.0",
