--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "chartjs-plugin-datalabels": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "justgage": "^1.7.0",
     "mysql2": "^3.12.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
