--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-jss": "^10.10.0",
     "react-router-dom": "^7.2.0",
     "styled-component": "^2.8.0",
+    "vercel": "^41.3.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
