--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-jss": "^10.10.0",
     "react-router-dom": "^7.2.0",
     "styled-component": "^2.8.0",
-    "vercel": "^41.3.2",
+    "styled-components": "^6.1.16",
+    "vercel": "^25.2.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
